--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,19 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test
-      - run: npm run lint
-      - run: npm run type-check
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install uuid @types/uuid
+
+      # Build and test
+      - name: Build and test
+        run: |
+          npm run build
+          npm run test
+          npm run lint
+          npm run type-check
 
   publish:
     needs: test
@@ -43,8 +51,15 @@ jobs:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
 
-      - run: npm ci
-      - run: npm run build
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install uuid @types/uuid
+
+      # Build and publish
+      - name: Build package
+        run: npm run build
 
       - name: Publish to npm
         run: npm publish
