update test setup

--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "prettier": "^3.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "node-fetch": "^2.6.7",
+    "@types/node-fetch": "^2.6.4"
   },
   "peerDependencies": {
     "zod": "^3.0.0"
