--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,22 @@ jobs:
         run: |
           npm ci
           npm install uuid @types/uuid
+          npm install --save-dev node-fetch @types/node-fetch
 
-      # Build and test
+      # Setup fetch polyfill for Node.js < 18
+      - name: Setup fetch polyfill
+        if: ${{ matrix.node-version == '16.x' }}
+        run: |
+          echo "global.fetch = require('node-fetch');" > fetch-polyfill.js
+
+      # Build and test with fetch polyfill
       - name: Build and test
         run: |
-          npm run build
-          npm run test
+          if [ "${{ matrix.node-version }}" = "16.x" ]; then
+            node -r ./fetch-polyfill.js $(which npm) run test
+          else
+            npm run test
+          fi
           npm run lint
           npm run type-check
 
@@ -51,13 +61,11 @@ jobs:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
 
-      # Install dependencies
       - name: Install dependencies
         run: |
           npm ci
           npm install uuid @types/uuid
 
-      # Build and publish
       - name: Build package
         run: npm run build
 
