--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stepflow",
+  "name": "@unhackit/stepflow",
   "version": "0.1.0",
   "description": "A flexible, type-safe workflow orchestration library for Node.js",
   "main": "dist/index.js",
